--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Bellx2</string>
 	<key>Builder Version</key>
-	<string>7536.25</string>
+	<string>8536.25</string>
 	<key>CFBundleDisplayName</key>
 	<string>HiraginoGothic</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
@@ -35,6 +35,8 @@
 	<dict>
 		<key>Website Access</key>
 		<dict>
+			<key>Include Secure Pages</key>
+			<true/>
 			<key>Level</key>
 			<string>All</string>
 		</dict>
